--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,42 @@
 }
 
 /* END OF NAVBAR */
+/* START OF FOOTER */
+.footer-list {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    padding-top: 20px;
+    background-color: rgb(144, 132, 71);
+    opacity: 0.8;
+  }
+
+  .footer-full {
+    background-color: rgb(144, 132, 71);
+    opacity: 0.8;
+  }
+
+  .footer-list>ul {
+    list-style-type: none;
+  }
+  .footer-links {
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: 100;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  }
+
+  .est {
+   text-align: center;
+   bottom: 0;
+  }
+
+  .icons {
+    text-align: center;
+  }
+
+  .insta {
+    padding: 0 25px;
+  }
+/* END OF FOOTER */
