--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,22 @@
 /* START OF HERO-SECTION */
 
-#gatherer {
+.hero-index {
   border-bottom: 5px solid rgb(229, 136, 123);
+  margin-top: 0px;
 }
 
 @media (min-width: 414px) {
-  #gatherer {
+  .hero-index {
     width: 100%;
+    margin-top: 75px;
+    background-image: url("../images/about-lychee2.jpg");
+    height: 300px;
+    background-position: center;
+  }
+}
+@media (min-width: 768) {
+  .hero-index {
+    height: 200px;
   }
 }
 /* END OF HERO-SECTION */
