--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,36 @@
-.form {
-    background-color: pink;
+/* START OF LOGIN */
+.logg {
+    background-color: rgb(122, 19, 27);
     padding: 100px;
-    background-image: url("../images/logo.png");
-    background-position: center;
-    background-size: 500px;
-    background-repeat: no-repeat;
+    margin: 170px 0;
+    color:  rgb(246, 245, 239);
+    border-radius: 15px;
+    border: 7px solid rgb(246, 245, 239);
 }
+
+.login {
+    text-align: center;
+    font-weight: bolder;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/* END OF LOGIN */
+/* START OF SIGNUP */
+
+/* END OF SIGNUP */
+/* START OF MEDIA QUARY */
+@media (min-width: 414px) {
+    .form {
+        background-image: url("../images/about-lychee2.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
+
+@media (min-width: 769px) {
+    .form {
+        background-image: url("../images/lychee-bundle.png");
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
+/* END OF MEDIA QUARY */
