--- a/css/contact.css
+++ b/css/contact.css
@@ -1,26 +1,49 @@
-.how {
-
+/* START OF HERO-SECTION */
+.section1-contact {
+  margin-top: 100px;
+  text-align: center;
+  padding-bottom: 25px;
+}
+.baby {
+    text-align: center;
+    padding-bottom: 75px;
 }
 
-.section1-contact {
-    margin-top: 100px;
-    text-align: center;
-    padding-bottom: 50px;
+.address {
+    padding-top: 100px;
+}
+/* END OF HERO-SECTION */
+/* START OF CONTACT FORM */
+.cont {
+  text-align: center;
+}
+.contact-us {
+  font-size: 40px;
+  padding-bottom: 15px;
+  font-weight: bolder;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .submit-button {
-    text-align: center;
+  text-align: center;
 }
 
 .sub-button {
-    text-align: center;
-    padding-top: 20px;
+  text-align: center;
+  padding-top: 20px;
 }
 
-.form {
-    background-color: rgb(246, 245, 239);
-    margin: 0 150px;
-    padding: 50px 0;
-    border: 5px double rgb(144, 132, 71);
-    border-radius: 10px;
+.forms {
+  background-color: rgb(246, 245, 239);
+  padding: 50px 75px;
+  border: 5px double rgb(144, 132, 71);
+  border-radius: 10px;
+  color: rgb(144, 132, 71);
 }
+/* END OF CONTACT FORM */
+/* START OF SECOND SECTION */
+.second-contact {
+  padding-top: 75px;
+  text-align: center;
+}
+/* END OF SECOND SECTION */
