--- a/css/contact.css
+++ b/css/contact.css
@@ -9,6 +9,18 @@
     padding-bottom: 75px;
 }
 
+#photo-bb {
+  border: 5px double rgb(229, 136, 123);
+  border-radius: 50%;
+}
+
+.how {
+  color: rgb(83, 135, 40);
+  font-size: 50px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-shadow: 2px 2px 2px rgb(229, 136, 123);
+}
+
 .address {
     padding-top: 100px;
 }
