--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,8 @@
 /* START OF HERO-SECTION */
 .hero-gallery {
     border-bottom: 2px solid  rgb(229, 136, 123);
-    background-color: rgb(246, 245, 239);
+    background-image: url("../images/about-lychee2.jpg");
+    background-position: center;
 }
 .gallery {
     padding-top: 100px;
@@ -9,9 +10,12 @@
     text-align: center;
     font-weight: 600;
     font-size: 75px;
-    text-shadow: 2px 2px 2px rgb(229, 136, 123);
+    text-shadow: 1px 1px 1px black;
     text-decoration: underline;
-    color: rgb(82, 135, 40);
+    /* color: rgb(229, 136, 123); */
+    color: rgb(144, 132, 71)
+    /* color: rgb(82, 135, 40); */
+
 }
 /* END OF HERO-SECTION */
 /* START OF SECTION-1 */
@@ -38,6 +42,9 @@
     padding-bottom: 30px;
 }
 .drink {
+    border-radius: 50%;
+}
+.bottom-gallery {
     border-radius: 50%;
 }
 /* END OF SECTION-3 */
