--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
   .footer-full {
     background-color: rgb(144, 132, 71);
     opacity: 0.8;
+    padding-bottom: 5px;
   }
 
   .footer-list>ul {
