--- a/css/gallery.css
+++ b/css/gallery.css
@@ -12,8 +12,8 @@
     font-size: 75px;
     text-shadow: 1px 1px 1px black;
     text-decoration: underline;
-    /* color: rgb(229, 136, 123); */
-    color: rgb(144, 132, 71)
+    color: rgb(229, 136, 123);
+    /* color: rgb(144, 132, 71) */
     /* color: rgb(82, 135, 40); */
 
 }
